--- a/PEC1_Ej2_1/index.html
+++ b/PEC1_Ej2_1/index.html
@@ -25,14 +25,12 @@
                 <label for="password">Contraseña</label>
                 <input type="password" id="password" placeholder="Introduzca su contraseña" tabindex="3">
                 <span id="visibilityIcon" class="material-symbols-outlined" onclick="showPassword()">visibility</span>
-                <span class="material-symbols-outlined" onclick="showPassword()">visibility_off</span>
                 <small>mensaje de Error</small>
             </div>
             <div class="formControl">
                 <label for="password2">Confirmar contraseña</label>
                 <input type="password" id="password2" placeholder="Confirme su contraseña" tabindex="4">
-                <span class="material-symbols-outlined" onclick="showPassword2()">visibility</span>
-                <span class="material-symbols-outlined" onclick="showPassword2()">visibility_off</span>
+                <span id="visibilityIcon2" class="material-symbols-outlined" onclick="showPassword2()">visibility</span>
                 <small>mensaje de Error</small>
             </div>
             <div class="formControl">
