--- a/PEC1_Ej2_2/index.html
+++ b/PEC1_Ej2_2/index.html
@@ -132,7 +132,7 @@
                 <option value="ZAR">ZAR</option>
             </select>
             <input type="number" id="amountOut" placeholder="0">
-            <div class="loaderContent" hidden>
+            <div id="loaderContent" hidden>
                 <img id="loader" src="img/money.png" class="loader" alt="">
             </div>
         </div>
