--- a/PEC1_Ej2_3/index.html
+++ b/PEC1_Ej2_3/index.html
@@ -7,14 +7,72 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="currency">
+      <label>Seleccione una moneda:</label>
+      <select id="currencySelect">
+          <option value="AED">AED</option>
+          <option value="ARS">ARS</option>
+          <option value="AUD">AUD</option>
+          <option value="BGN">BGN</option>
+          <option value="BRL">BRL</option>
+          <option value="BSD">BSD</option>
+          <option value="CAD">CAD</option>
+          <option value="CHF">CHF</option>
+          <option value="CLP">CLP</option>
+          <option value="CNY">CNY</option>
+          <option value="COP">COP</option>
+          <option value="CZK">CZK</option>
+          <option value="DKK">DKK</option>
+          <option value="DOP">DOP</option>
+          <option value="EGP">EGP</option>
+          <option value="EUR">EUR</option>
+          <option value="FJD">FJD</option>
+          <option value="GBP">GBP</option>
+          <option value="GTQ">GTQ</option>
+          <option value="HKD">HKD</option>
+          <option value="HRK">HRK</option>
+          <option value="HUF">HUF</option>
+          <option value="IDR">IDR</option>
+          <option value="ILS">ILS</option>
+          <option value="INR">INR</option>
+          <option value="ISK">ISK</option>
+          <option value="JPY">JPY</option>
+          <option value="KRW">KRW</option>
+          <option value="KZT">KZT</option>
+          <option value="MXN">MXN</option>
+          <option value="MYR">MYR</option>
+          <option value="NOK">NOK</option>
+          <option value="NZD">NZD</option>
+          <option value="PAB">PAB</option>
+          <option value="PEN">PEN</option>
+          <option value="PHP">PHP</option>
+          <option value="PKR">PKR</option>
+          <option value="PLN">PLN</option>
+          <option value="PYG">PYG</option>
+          <option value="RON">RON</option>
+          <option value="RUB">RUB</option>
+          <option value="SAR">SAR</option>
+          <option value="SEK">SEK</option>
+          <option value="SGD">SGD</option>
+          <option value="THB">THB</option>
+          <option value="TRY">TRY</option>
+          <option value="TWD">TWD</option>
+          <option value="UAH">UAH</option>
+          <option value="USD" selected>USD</option>
+          <option value="UYU">UYU</option>
+          <option value="VND">VND</option>
+          <option value="ZAR">ZAR</option>
+      </select>
+    </div>
+
     <div class="movieContainer">
-        <label for="">Seleccione una película:</label>
-        <select id="movie">
-            <option value="10">Avengers: Endgame ($10)</option>
-            <option value="12">Joker ($12)</option>
-            <option value="8">Toy Story 4 ($8)</option>
-            <option value="9">The Lion King ($9)</option>
-        </select>
+      <label>Pick a movie:</label>
+      <select id="movie">
+        <option class="currencyOut" value="10">Avengers: Endgame ($10)</option>
+        <option class="currencyOut" value="12">Joker ($12)</option>
+        <option class="currencyOut" value="8">Toy Story 4 ($8)</option>
+        <option class="currencyOut" value="9">The Lion King ($9)</option>
+      </select>
     </div>
 
     <ul class="showcase">
@@ -98,7 +156,7 @@
       </div>
   
       <p class="text">
-        Ha seleccionado <span id="count">0</span> asientos por un precio de $<span id="total">0</span>
+        Ha seleccionado <span id="count">0</span> asientos por un precio de <span class="currencyOut">$</span><span id="total">0</span>
       </p>
     <script src="script.js"></script>
 </body>
